# lazy-init-macro-sample

./: CMakeLists.txt  README.md  main.cpp
